@@ -1,10 +1,15 @@
 2016-12-18  Dirk Eddelbuettel  <edd@debian.org>
 
+	* R/anytime.R (anydate): Now calls anytime_cpp with asDate=TRUE
+	(utcdate): Idem
+
 	* src/anytime.cpp (anytime_cpp): New option asDate
 	(convertToTime): Idem
 	(stringToTime): Idem
 	(ptToDoubleUTC): Idem
 	(ptToDouble): Idem
+
+	* tests/allFormats.R: Minor fix
 
 2016-12-14  Dirk Eddelbuettel  <edd@debian.org>
 
